@@ -268,22 +268,6 @@ find_count:
   src: "<r:nodes in='site' where='name like \"a%\"' find='count'/>"
   res: "3"
 
-link_page_next:
-  context:
-    pak: 2
-  src: "<r:nodes in='site' limit='3' order='zip' paginate='pak'><r:link page='previous'/> | <r:show var='pak'/> | <r:link page='next'/> || <r:each join=',' do='title'/></r:nodes>"
-  res: "<a href='/oo/projects-list/Clean-Water-project/page22.html?pak=1'>1</a> | 2 | <a href='/oo/projects-list/Clean-Water-project/page22.html?pak=3'>3</a> || tiger,lion,myLife"
-
-link_page_next_with_block:
-  src: "<r:nodes in='site' limit='3' order='zip' paginate='pak'><r:link page='next' do='t'>next</r:link></r:nodes>"
-  res: "<a href='/oo/projects-list/Clean-Water-project/page22.html?pak=2'>next</a>"
-
-link_page_list:
-  context:
-    pak: 2
-  src: "<r:nodes in='site' limit='10' order='zip' paginate='pak' do='link' page='list' join=', '/>"
-  tem: "/set_pak_page != set_pak.*zen_path\(@node,:pak.*elsif true.*set_pak_page/"
-  res: "/<a href='.*page22.html\?pak=1'>1</a>, 2, .*pak=3'>3</a>.*pak=4'>4</a>.*pak=5'>5</a>/"
 
 # TODO:
 #link_page_list_single_page:
