@@ -6,9 +6,31 @@ it_should_compile_custom_select:
     site: complex
     ref_date: 2004-09-01
   src: "<r:emp_form_dates do='each' join=', '><r:show attr='title'/>(<r:priority/>)[<r:last_date format='%Y-%m'/>]</r:emp_form_dates>"
-  tem: '/var2.attributes\["priority"\].*\[<%= format_date\(var2.attributes\["last_date"\], :format => "%Y-%m"\) %>\]/'
+  tem: '/var2.attributes\["priority"\].*\[<%= format_date\(var2.rcast\("last_date", :time\), :format => "%Y-%m"\) %>\]/'
   res: 'how to use the winch(10)[], secure a site(10)[], dangerous transportations(10)[2004-03], engine maintenance(5)[], information transmission(5)[2002-05], fiber junction(5)[2003-03], problem formulation(5)[2006-03], how to use the radio(1)[]'
 
+type_cast_to_time_using_existing_field:
+  context:
+    node_name: '@node'
+    node: roger
+    visitor: complex_admin
+    site: complex
+    ref_date: 2004-09-01
+  src: "<r:emp_form_dates where='idx_datetime1 is not null' do='each' join=', ' do='idx_datetime1' format='%d.%m.%Y %H:%M'/>"
+  tem: '/format_date\(var2.idx_datetime1/'
+  res: '15.03.2006 01:00, 05.05.2003 02:00, 03.03.2005 01:00'
+
+type_cast_to_time_custom_field:
+  context:
+    node_name: '@node'
+    node: roger
+    visitor: complex_admin
+    site: complex
+    ref_date: 2004-09-01
+  src: "<r:emp_form_dates where='next_date is not null' do='each' join=', ' do='next_date' format='%d.%m.%Y %H:%M'/>"
+  tem: '/format_date\(var2.rcast\("next_date", :time/'
+  res: '15.03.2006 01:00, 05.05.2003 02:00, 03.03.2005 01:00'
+  
 it_should_group_by_custom_select:
   context:
     node_name: '@node'
