@@ -12,6 +12,7 @@
  * Enabled "static" assets with symlink to skins in static bricks (/static/[brick]-[skin]/xxx.css => bricks/[brick]/skins/[skin]/static/xxx.css)
  * No more strict scoping: "set" variables are rewritten if type matches.
  * Added support for new in rubyless (Post.new, Post.new(:title => 'foo')).
+ * Added support for type in custom queries and SQLiss select "nodes select created_at as ti:time"
 
 * Minor changes
  * Fixed label traduction for param.
